<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ux7.fullhyve.ui.activities.NewTaskView">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/new_task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="Task Name"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/new_task_deadline_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Deadline"
                    android:textAlignment="center"
                    android:textColor="@color/textLight"
                    android:textSize="18dp" />

                <DatePicker
                    android:id="@+id/new_task_deadline"
                    android:layout_width="match_parent"
                    android:layout_height="123dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/new_task_team_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="Team (Optional)"
                    android:textColor="@color/textLight"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/new_task_team_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/user_picture_round" />

                    <Button
                        android:id="@+id/new_task_select_team_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:onClick="selectTeam"
                        android:background="@drawable/ripple_effect_accent"
                        android:text="Select"
                        android:textColor="@color/textdark" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/new_task_assignee_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="Assignee"
                    android:textColor="@color/textLight"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/new_task_assignee_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/user_picture_round" />

                    <Button
                        android:id="@+id/new_task_select_assignee_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:onClick="selectAssignee"
                        android:background="@drawable/ripple_effect_accent"
                        android:text="Select"
                        android:textColor="@color/textdark" />
                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/new_task_description"
                android:layout_width="match_parent"
                android:layout_height="243dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:ems="10"
                android:gravity="top"
                android:hint="Description"
                android:inputType="textMultiLine"
                android:padding="5dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect_accent"
                android:text="Create"
                android:onClick="createTask"
                android:textColor="@color/textdark" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
