...
                        android:text="01/04/2018"
                        android:textSize="20dp" />
                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/task_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                tools:listitem="@layout/item_task" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/task_add_task_fab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            app:layout_anchor="@+id/linearLayout"
            app:layout_anchorGravity="right|bottom"
...
