<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.NewTeam">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/new_team_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Team Name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/new_team_focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Focus"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/new_team_description"
            android:layout_width="match_parent"
            android:layout_height="197dp"
            android:ems="10"
            android:gravity="top"
            android:hint="Description"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/new_team_image"
                android:layout_width="127dp"
                android:layout_height="127dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                app:srcCompat="@mipmap/pp1_round" />

            <ProgressBar
                android:id="@+id/new_image_upload_progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_weight="0"
                android:visibility="invisible" />

            <Button
                android:id="@+id/new_team_image_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:text="Upload"
                android:onClick="getImage"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <Button
            android:id="@+id/new_team_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="Create"
            android:onClick="createTeam"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
